<resources>
    <string name="app_name">区块糖果</string>
    <!--title-->
    <string name="sweet_title">领取糖果</string>
    <string name="title_block_rate">区块链评级</string>
    <string name="title_collection">我的收藏</string>
    <string name="title_price">当前价格</string>
    <string name="title_usersweet">我的糖果</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_pw">忘记密码</string>
    <string name="title_about">关于我们</string>
    <string name="about_desc">&#160;&#160;&#160;&#160;&#160;&#160;区块糖果是为对数字货币感兴趣的币友提供更便捷、准确的信息服务，提供中外有关区块链项目的数据分析和数据挖掘服务。我们拥有全球大部分数字货币、交易平台、交易对的数据资源，具有初步过滤虚假项目的能力，并且提供行情分析等多维度的信息服务。未来主要的发展方向是打造国内最专业的数字货币行业大数据平台。</string>
    <string name="sign">标记</string>
    <string name="signed">已领取</string>

    <string name="update_pw">修改密码</string>

    <string name="register_hint">请输入验证码</string>
    <string name="captcha_btn_resend">重发验证码</string>
    <string name="validate_btn_hint">获取验证码</string>


    <string name="rate_ico">ICO date: </string>
    <string name="rate_product">Product type: </string>
    <string name="rate_industry">Industry: </string>
    <string name="rate_desc">Description: </string>
    <string name="rate_feat">Features: </string>
    <string name="rate_tech">Technical details: </string>
    <string name="rate_Website">Website: </string>

    <!--home-->
    <string name="get_sweets">领取糖果</string>
    <string name="blockchain_rate">区块链评级</string>
    <string name="new_price">当前价格</string>
    <string name="sweets">糖果</string>
    <string name="rate">评级</string>
    <string name="nick">名称</string>
    <string name="get_people">领取人数</string>
    <string name="click">点击领取</string>
    <string name="amount">涨跌幅</string>
    <string name="price">价格</string>
    <string name="website">官网地址: </string>
    <string name="login">登录</string>
    <string name="quit">退出登陆</string>
    <string name="deal">《区块糖果用户登录注册协议》</string>
    <string name="contact">QQ客服:2038718090</string>

    <string name="title_terrace">平台</string>
    <string name="title_wallet">钱包</string>

    <!-- error-->
    <string name="network_error">请检查网络</string>
    <string name="data_error">数据异常</string>
    <string name="net_error">网络请求失败</string>
    <string name="title_activity_web_view">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
