<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    android:layout_height="match_parent"
    tools:context="cn.com.virtualbitcoin.activity.PriceActivity">
    <include layout="@layout/back_tooble_item"/>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black_333"
            android:text="@string/nick"/>
        <TextView
            android:layout_marginRight="100dp"
            android:id="@+id/Rtext"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black_333"
            android:text="@string/price"/>
        <TextView
            android:id="@+id/amount"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black_333"
            android:text="@string/amount"/>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/amountRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>
