<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_marginTop="7dp"
    android:layout_height="100dp">
    <RelativeLayout
        android:background="@color/white"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/iv_sweets"/>
            <TextView
                android:textSize="@dimen/home_text_16sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black_color"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_sweets"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/white"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/iv_hammer"/>
            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@color/black_color"
                android:textSize="@dimen/home_text_16sp"

                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blockchain_rate"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/white"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_centerInParent="true"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginTop="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/iv_price"/>
            <TextView
                android:layout_marginTop="8dp"
                android:textSize="@dimen/home_text_16sp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_color"
                android:text="@string/new_price"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>